fixed styling and added bootstrap[

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css"/>
 
     <title>Moitroid</title>
     </head>
     <body>
-    <div class="container-fluid canvasFrame mt-5">
-        <canvas class="w-100" width="600" height="600"></canvas>
+    <div class="container h-100">
+        <div class="canvasFrame d-flex mt-5 align-items-center justify-content-center">
+            <canvas class="mx-auto" width="600" height="600"></canvas>
+        </div>
     </div>
         <script src="https://unpkg.com/kontra@4.0.0/dist/core.js"></script>
         <script src="https://unpkg.com/kontra@4.0.0/dist/sprite.js"></script>
